--- a/canlender_app/package.json
+++ b/canlender_app/package.json
@@ -8,6 +8,7 @@
     "react": "^16.3.1",
     "react-big-calendar": "^0.19.0",
     "react-dom": "^16.3.1",
+    "react-popup": "^0.9.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
