--- a/canlender_app/package.json
+++ b/canlender_app/package.json
@@ -9,7 +9,8 @@
     "react-big-calendar": "^0.19.0",
     "react-dom": "^16.3.1",
     "react-popup": "^0.9.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
