--- a/canlender_app/package.json
+++ b/canlender_app/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.22.0",
     "react": "^16.3.1",
     "react-big-calendar": "^0.19.0",
+    "react-csv": "^1.0.14",
     "react-dom": "^16.3.1",
     "react-popup": "^0.9.2",
     "react-scripts": "1.1.4",
